# ilmsens-python

./: .gitignore  90-ilmsens.rules  LICENSE  README.md  pyproject.toml  setup.py  todo
ilmsens/: __init__.py  ilmsens_hal_defn.py  ilmsens_hal_types.py  ilmsens_hal_version.py  mlbs12.txt  mlbs15.txt  mlbs9.txt  out.txt  sh3100.py  uwb_hal.py
ilmsens_hal/: __init__.py  defn.py  error.py  ilmsens_error.py  ilmsens_hal.py  utils.py
ilmsens_hal/utils/: mlbs12.txt  utils.py
manuals/: python_example.ipynb  strings.txt
manuals/example/: ilmsens_hal_example_M09.cpp
manuals/examples/cpp/: Makefile  ilmsens_hal_example_M12.cpp
manuals/examples/python/: ilmsens_hal_example_M09.py
src/ilmsens/: __init__.py  sh3100.py
tests/: __init__.py  demo.ipynb  hal_itest.py  hal_test.py  mlbs_test.py
tests/ideal_mlbs/: m12_ov1.mat
tests/ideal_outputs/: m12_ov2.mat  m15_ov1.mat  m15_ov2.mat
tools/: test_adc_delay.ipynb
tools/ideal_mlbs/: m9_ov1.mat  m9_ov2.mat
